Attackbonus now also for distance fight  Small changes for server interaction

--- a/source/tools/win/weaponguide.vcproj
+++ b/source/tools/win/weaponguide.vcproj
@@ -164,6 +164,9 @@
 				RelativePath="..\..\password.cpp">
 			</File>
 			<File
+				RelativePath="..\..\playercolor.cpp">
+			</File>
+			<File
 				RelativePath="..\..\stack.cpp">
 			</File>
 			<File
