--- a/source/win32/msvc/mapeditor/mapeditor.vcproj
+++ b/source/win32/msvc/mapeditor/mapeditor.vcproj
@@ -328,6 +328,9 @@
 				RelativePath="..\..\..\player.cpp">
 			</File>
 			<File
+				RelativePath="..\..\..\playercolor.cpp">
+			</File>
+			<File
 				RelativePath="..\..\..\dialogs\playersetup.cpp">
 			</File>
 			<File
