- Added email editing in admin-game dialog  - automatic resetting of player data when player is terminated

--- a/installer/asc.nsi.in
+++ b/installer/asc.nsi.in
@@ -119,6 +119,11 @@ Section "ASC main program (required)"
   
 SectionEnd
 
+Section "USB Stick Mode"
+  SetOutPath $INSTDIR
+  File "data/asc2.ini"
+SectionEnd
+
 Section "Music Download"
    SetOutPath "$INSTDIR\music"
    IfFileExists "$INSTDIR\music\frontiers.mp3" +6 0
