- Fixed missing info in dump-building  - added self-destruct function  - Fixed: weather for buildings not correctly saved to cache

--- a/source/doxygen.config
+++ b/source/doxygen.config
@@ -95,6 +95,7 @@ EXCLUDE                = tools \
                          libs/rand \
                          libs/sdlmm \
                          libs/triangul \
+                         libs/revel \
                          dos \
                          test
 EXCLUDE_SYMLINKS       = NO
