Fixed unix buildprocess  Fixed autoharvest buildings  Update main version counter

--- a/source/actions/Makefile.in
+++ b/source/actions/Makefile.in
@@ -44,7 +44,7 @@ CONFIG_HEADER = $(top_builddir)/config.h
 CONFIG_CLEAN_FILES =
 LTLIBRARIES = $(noinst_LTLIBRARIES)
 libactions_la_DEPENDENCIES =
-am_libactions_la_OBJECTS = servicing.lo jumpdrive.lo
+am_libactions_la_OBJECTS = servicing.lo jumpdrive.lo selfdestruct.lo
 libactions_la_OBJECTS = $(am_libactions_la_OBJECTS)
 DEFAULT_INCLUDES = -I. -I$(top_builddir)@am__isrc@
 depcomp = $(SHELL) $(top_srcdir)/depcomp
@@ -218,7 +218,7 @@ top_srcdir = @top_srcdir@
 MAINTAINERCLEANFILES = Makefile.in
 AM_CXXFLAGS = $(SDL_CFLAGS) $(SIGC_CFLAGS) -Dmaindialogs
 noinst_LTLIBRARIES = libactions.la
-libactions_la_SOURCES = servicing.cpp jumpdrive.cpp
+libactions_la_SOURCES = servicing.cpp jumpdrive.cpp selfdestruct.cpp
 libactions_la_LIBADD = @SDL_LIBS@
 EXTRA_DIST = $(srcdir)/*.h
 all: all-am
@@ -273,6 +273,7 @@ distclean-compile:
 	-rm -f *.tab.c
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/jumpdrive.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/selfdestruct.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/servicing.Plo@am__quote@
 
 .cpp.o:
