--- a/source/libs/revel/Makefile.am
+++ b/source/libs/revel/Makefile.am
@@ -2,6 +2,8 @@ noinst_LTLIBRARIES = librevel.la
 
 librevel_la_SOURCES = avilib.c avilib.h BaseEncoder.cpp BaseEncoder.h revelcore.cpp XvidEncoder.cpp XvidEncoder.h
 
+EXTRA_DIST=$(srcdir)/*.h
+
 AM_CFLAGS := $(AM_CFLAGS) 
 INCLUDES = $(AM_CFLAGS)
 
