--- a/source/libs/revel/Makefile.in
+++ b/source/libs/revel/Makefile.in
@@ -227,6 +227,7 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 noinst_LTLIBRARIES = librevel.la
 librevel_la_SOURCES = avilib.c avilib.h BaseEncoder.cpp BaseEncoder.h revelcore.cpp XvidEncoder.cpp XvidEncoder.h
+EXTRA_DIST = $(srcdir)/*.h
 AM_CFLAGS := $(AM_CFLAGS) 
 INCLUDES = $(AM_CFLAGS)
 all: all-am
