Updated windows build

--- a/source/win32/msvc/ASC/ASC.vcproj
+++ b/source/win32/msvc/ASC/ASC.vcproj
@@ -346,6 +346,9 @@
 				RelativePath="..\..\..\password.cpp">
 			</File>
 			<File
+				RelativePath="..\..\..\pg_mapdisplay.cpp">
+			</File>
+			<File
 				RelativePath="..\..\..\player.cpp">
 			</File>
 			<File
