--- a/installer/asc.nsi.in
+++ b/installer/asc.nsi.in
@@ -68,6 +68,7 @@ Section "ASC main program (required)"
   File "@inst_win32_DLL_dir@/SDL_image.dll"
   File "@inst_win32_DLL_dir@/sdl_sound.dll"
   File "@inst_win32_DLL_dir@/vorbisfile.dll"
+  File "@inst_win32_DLL_dir@/libcurl.dll"
   
   ; Debug DLLs
   File "@inst_win32_DLL_dir@/sdl_sound_d.dll"
