Increased experience gain in close combat  Removing temp files from make dist  clean up of configure.in

--- a/Makefile.am
+++ b/Makefile.am
@@ -22,5 +22,5 @@ unitguide:
 	cd doc && make unitguide
 
 dist-hook:
-	rm -rf `find $(distdir) -name CVS -o -name "*.ascdat" -o -name asc2_dlg.zip -o -name "*~" -o -name .cvsignore`
+	rm -rf `find $(distdir) -name CVS -o -name "*.ascdat" -o -name asc2_dlg.zip -o -name "*~" -o -name .cvsignore -o -name ".#*"`
 	rm -rf `find $(distdir)/data/music -name "*.ogg" `
