--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 
-AC_INIT(asc,2.0.99.13)
+AC_INIT(asc,2.0.99.16)
 
 AM_CONFIG_HEADER(config.h)
 AM_INIT_AUTOMAKE
@@ -126,14 +126,21 @@ SAVE_CFLAGS=$CFLAGS
 SAVE_LIBS=$LIBS
 
 
-# LIBCURL_CHECK_CONFIG ([DEFAULT-ACTION], [MINIMUM-VERSION],
-#                       [ACTION-IF-YES], [ACTION-IF-NO])
 
+AC_ARG_ENABLE( serverinterface, AS_HELP_STRING([--enable-serverinterface],[enables usage of the server interface (experimental)]), SERVERINTERFACE=1 )
+if test "X$SERVERINTERFACE" = "X1"; then
+ LIBCURL_CHECK_CONFIG(yes,7.10.0,,AC_LIB_MISSING( curl, http://curl.haxx.se/libcurl/ ))
+else
+ LIBCURL=""
+ LIBCURL_CPPFLAGS=""
+fi
 
-LIBCURL_CHECK_CONFIG(yes,7.10.0,,AC_LIB_MISSING( curl, http://curl.haxx.se/libcurl/ ))
+AM_CONDITIONAL( [CURLCLIENT], [test "X$SERVERINTERFACE" = "X1"] )
+
 
 AC_SUBST(LIBCURL)
 AC_SUBST(LIBCURL_CPPFLAGS)
+AC_SUBST(NETWORKLIB)
 
 
 #XVID_VERSION=1.0.1
