--- a/source/network/Makefile.am
+++ b/source/network/Makefile.am
@@ -5,6 +5,8 @@ INCLUDES = -I$(top_srcdir)/source/libs/paragui/include
 
 AM_CXXFLAGS		= @SDL_CFLAGS@ @SIGC_CFLAGS@ @LIBCURL_CPPFLAGS@ -Dsgmain 
 
+noinst_LTLIBRARIES      = libnetwork.la 
+
 libnetwork_la_SOURCES	= simple_file_transfer.cpp
 libnetwork_la_LIBADD		= @SDL_LIBS@ -lpng -lz 
 
