--- a/source/ai/Makefile.in
+++ b/source/ai/Makefile.in
@@ -124,6 +124,8 @@ MKDIR_P = @MKDIR_P@
 MUSICDIR = @MUSICDIR@
 NETWORKLIB = @NETWORKLIB@
 OBJEXT = @OBJEXT@
+OGG_CFLAGS = @OGG_CFLAGS@
+OGG_LIBS = @OGG_LIBS@
 PACKAGE = @PACKAGE@
 PACKAGE_BUGREPORT = @PACKAGE_BUGREPORT@
 PACKAGE_NAME = @PACKAGE_NAME@
