--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 
-AC_INIT(asc,2.1.0.0)
+AC_INIT(asc,2.1.0.1)
 
 AM_CONFIG_HEADER(config.h)
 AM_INIT_AUTOMAKE
@@ -232,13 +232,19 @@ if test "X$SDLsoundmissing" = "Xy" ; then
    dnl Check for ogg
    XIPH_PATH_VORBIS
    if test "x$no_vorbis" = "x" ; then
-      AdditionalIncludeDir="$AdditionalIncludeDir -I\$(abs_top_srcdir)/source/libs/sdl_sound "
-      
-      SDL_SOUND_LIB="\$(abs_top_builddir)/source/libs/sdl_sound/libSDL_sound_int.la"
-      
-      SdlSoundDir=sdl_sound
-      AC_SUBST(SdlSoundDir)
-      
+   
+      XIPH_PATH_OGG([OGGFOUND=Y])
+      if test "x$OGGFOUND" = "xY" ; then 
+   
+         AdditionalIncludeDir="$AdditionalIncludeDir -I\$(abs_top_srcdir)/source/libs/sdl_sound "
+         
+         SDL_SOUND_LIB="\$(abs_top_builddir)/source/libs/sdl_sound/libSDL_sound_int.la"
+         
+         SdlSoundDir=sdl_sound
+         AC_SUBST(SdlSoundDir)
+      else
+         AC_LIB_MISSING( Ogg, http://xiph.org/ogg/ )
+      fi
    else
       AC_LIB_MISSING( Vorbis, http://xiph.org/vorbis/ )
    fi
