New Unit colorizer  Fixed problems with empty object images

--- a/source/win32/msvc/ASC/ASC.vcproj
+++ b/source/win32/msvc/ASC/ASC.vcproj
@@ -494,6 +494,9 @@
 					RelativePath="..\..\..\graphics\blitter.cpp">
 				</File>
 				<File
+					RelativePath="..\..\..\graphics\colorizer.cpp">
+				</File>
+				<File
 					RelativePath="..\..\..\graphics\drawing.cpp">
 				</File>
 				<File
