--- a/source/win32/msvc/mapeditor/mapeditor.vcproj
+++ b/source/win32/msvc/mapeditor/mapeditor.vcproj
@@ -412,6 +412,9 @@
 					RelativePath="..\..\..\graphics\blitter.cpp">
 				</File>
 				<File
+					RelativePath="..\..\..\graphics\colorizer.cpp">
+				</File>
+				<File
 					RelativePath="..\..\..\graphics\drawing.cpp">
 				</File>
 				<File
