Fixed: mine removal didn't reset icons  polished email client invocation

--- a/source/libs/paragui/VisualC/paragui_dynamic.vcproj
+++ b/source/libs/paragui/VisualC/paragui_dynamic.vcproj
@@ -29,6 +29,7 @@
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
 				BufferSecurityCheck="TRUE"
+				DefaultCharIsUnsigned="TRUE"
 				ForceConformanceInForLoopScope="TRUE"
 				RuntimeTypeInfo="TRUE"
 				PrecompiledHeaderFile=".\Debug/paragui_dynamic.pch"
@@ -92,6 +93,7 @@
 				StringPooling="TRUE"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="TRUE"
+				DefaultCharIsUnsigned="TRUE"
 				ForceConformanceInForLoopScope="TRUE"
 				RuntimeTypeInfo="TRUE"
 				PrecompiledHeaderFile=".\Release/paragui_dynamic.pch"
