--- a/source/dialogs/Makefile.am
+++ b/source/dialogs/Makefile.am
@@ -19,7 +19,7 @@ libgamedialogs_la_SOURCES   = cargodialog.cpp unitcounting.cpp cargowidget.cpp a
                               
 libgamedialogs_la_LIBADD    = @SDL_LIBS@ 
 
-libmapeddialogs_la_SOURCES   = cargoeditor.cpp cargowidget.cpp eventeditor.cpp newmap.cpp exchangegraphics.cpp
+libmapeddialogs_la_SOURCES   = cargoeditor.cpp cargowidget.cpp eventeditor.cpp newmap.cpp exchangegraphics.cpp importbi3map.cpp 
 libmapeddialogs_la_LIBADD    = @SDL_LIBS@
 
 EXTRA_DIST=$(srcdir)/*.h
