--- a/source/win32/msvc/mapeditor/mapeditor.vcproj
+++ b/source/win32/msvc/mapeditor/mapeditor.vcproj
@@ -462,6 +462,9 @@
 					RelativePath="..\..\..\dialogs\fileselector.cpp">
 				</File>
 				<File
+					RelativePath="..\..\..\dialogs\importbi3map.cpp">
+				</File>
+				<File
 					RelativePath="..\..\..\dialogs\messagedialog.cpp">
 				</File>
 				<File
